--- a/play.html
+++ b/play.html
@@ -10,6 +10,7 @@
 "use strict";
 
 var MAP_NAME = "GECKSETL"
+var DEBUG = true
 var gMapScript = null
 var floorMap = null
 var roofMap = null
@@ -31,6 +32,7 @@ var currentElevation = 0
 var doLoadScripts = true // should we load scripts?
 var doUpdateCritters = true // should we give critters heartbeats?
 var doTimedEvents = true // should we handle registered timed events?
+var doCombat = false // allow combat?
 var gameTickTime = 0 // in Fallout 2 ticks (elapsed seconds * 10)
 var lastGameTick = 0
 var combat = null
@@ -307,11 +309,15 @@ heart.load = function() {
 		//scriptingEngine.updateMap(gMapScript, gObjects, currentElevation)
 	}, "json")
 
-	// for testing
-	var a = gObjects[1175]
-	var b = gObjects[1260]
-	gObjects = [a, b]
-	//critterWalkTo(a, {x: 103, y: 113})
+	if(doCombat && DEBUG) {
+		// for testing
+		var a = gObjects[1175]
+		var b = gObjects[1260]
+		gObjects = [a, b]
+
+		a.art = "art/critters/HANPWRAA"
+		b.art = "art/critters/HANPWRAA"
+	}
 }
 
 heart.keydown = function(k) {
@@ -355,7 +361,7 @@ heart.keydown = function(k) {
 	if(k == 'm') {
 		critterWalkTo(player, mouseHex)
 	}
-	if(k == 'r') {
+	if(k == 'e') {
 		critterWalkTo(player, mouseHex, true)
 	}
 	if(k == 'g') {
@@ -388,6 +394,7 @@ heart.keydown = function(k) {
 		}
 	}
 	if(k == 'c') {
+		if(!doCombat) return
 		if(inCombat === true && combat.inPlayerTurn === true) {
 			console.log("[TURN]")
 			combat.nextTurn()
