local_var defaults to 0; switch to lowercase properties

--- a/play.html
+++ b/play.html
@@ -42,7 +42,7 @@ var showRoof = true // show roof tiles?
 var showObjects = true // show objects?
 
 var doLoadScripts = true // should we load scripts?
-var doUpdateCritters = true // should we give critters heartbeats?
+var doUpdateCritters = false // should we give critters heartbeats?
 var doTimedEvents = true // should we handle registered timed events?
 var doCombat = false // allow combat?
 
