add LICENSE.txt and a few license headers

--- a/play.html
+++ b/play.html
@@ -1,3 +1,8 @@
+<!-- DarkFO
+     Copyright (c) 2014 darkf
+     Licensed under the terms of the zlib license
+ -->
+
 <html>
 <head>
 <title>DarkFO: Play!</title>
@@ -45,7 +50,7 @@ var showObjects = true // show objects?
 var doLoadScripts = true // should we load scripts?
 var doUpdateCritters = false // should we give critters heartbeats?
 var doTimedEvents = true // should we handle registered timed events?
-var doCombat = true // allow combat?
+var doCombat = false // allow combat?
 
 var gameTickTime = 0 // in Fallout 2 ticks (elapsed seconds * 10)
 var lastGameTick = 0 // real time of the last game tick
