--- a/play.html
+++ b/play.html
@@ -51,6 +51,7 @@ var doLoadScripts = true // should we load scripts?
 var doUpdateCritters = false // should we give critters heartbeats?
 var doTimedEvents = true // should we handle registered timed events?
 var doCombat = false // allow combat?
+var doLoadItemInfo = true // load item information (such as inventory images)?
 
 var gameTickTime = 0 // in Fallout 2 ticks (elapsed seconds * 10)
 var lastGameTick = 0 // real time of the last game tick
@@ -58,6 +59,7 @@ var combat = null // combat object
 var inCombat = false // are we currently in combat?
 
 var proFiles = {}
+var lstFiles = {}
 var messageFiles = {}
 
 function cloneStats(stats) { return $.extend({}, stats) }
@@ -134,13 +136,30 @@ function getMessage(name, id) {
 	}
 }
 
-function lazyLoadImage(art, callback) {
+function loadLst(lst) {
+	var ret = null
+	$.get("data/" + lst + ".lst", function(lst) {
+		ret = lst.split('\n')
+	}, "text").fail(function(err) { console.log("lst loading error: "  + err) })
+	return ret
+}
+
+function getLstId(lst, id) {
+	if(lstFiles[lst] === undefined)
+		lstFiles[lst] = loadLst(lst)
+	if(lstFiles[lst] === undefined)
+		return null
+
+	return lstFiles[lst][id]
+}
+
+function lazyLoadImage(art, callback, isHeartImg) {
 	var img = new Image()
 	img.src = art + '.png'
 	img.onload = function() {
-		images[art] = img
-		if(callback !== undefined)
-			callback()
+		images[art] = new heart.HeartImage(img)
+		if(callback)
+			callback(isHeartImg ? images[art] : img)
 	}
 }
 
@@ -241,14 +260,34 @@ function changeElevation(level, updateScripts) {
 	}
 }
 
+// Initialize various objects, such as items.
+function initObjects(objects) {
+	for(var i = 0; i < objects.length; i++) {
+		var obj = objects[i]
+		if(obj.type === "critter") {
+			initObjects(obj.inventory)
+			continue // critters are handled separately
+		}
+
+
+		if(obj.type === "item") { // load item inventory art
+			obj.pro = loadPRO(obj.pid, obj.pidID)
+			if(obj.pro === null) continue
+			
+			var invPID = obj.pro.extra.invFRM & 0xffff
+			obj.invArt = "art/inven/" + getLstId("art/inven/inven", invPID).split('.')[0]
+		}
+	}
+}
+
+// Initialize critters (mainly loading inventory and .PRO files)
 function initCritters() {
 	// load .PRO prototypes for all critters
 	for(var i = 0; i < gObjects.length; i++) {
 		var obj = gObjects[i]
 		if(obj.type !== "critter") continue
-		var pro = loadPRO(obj.pid, obj.pidID)
-		obj.pro = pro
-		obj.stats = calcStats(obj, pro)
+		obj.pro = loadPRO(obj.pid, obj.pidID)
+		obj.stats = calcStats(obj, obj.pro)
 		obj.name = getMessage("pro_crit", obj.pro.textID)
 
 		// PROs for weapons
@@ -346,6 +385,8 @@ heart.load = function() {
 		b.art = "art/critters/hanpwraa"
 	}
 
+	if(doLoadItemInfo !== false)
+		initObjects(gObjects)
 	initCritters()
 }
 
@@ -454,10 +495,15 @@ heart.keydown = function(k) {
 
 			$("#inventory").html("")
 			for(var i = 0; i < obj.inventory.length; i++) {
-				var s = obj.inventory[i].art.split('/')
-				var inventoryImage = 'art/inven/' + s[s.length-1]
-				console.log(inventoryImage)
-				lazyLoadImage(inventoryImage)
+				if(obj.inventory[i].invArt === undefined) { // make a guess
+					var s = obj.inventory[i].art.split('/')
+					var inventoryImage = 'art/inven/' + s[s.length-1]
+				} else
+					var inventoryImage = obj.inventory[i].invArt
+
+				console.log("inv img: " + inventoryImage)
+				if(images[inventoryImage] === undefined)
+					lazyLoadImage(inventoryImage, null, false)
 				var img = $("<img>").attr("src", inventoryImage+'.png').
 				          attr("width", 90).attr("height", 60) // 90x60 // 70x40
 				$("#inventory").append(img)
